kubernetes/home-assistant/deployment-home-assistant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassist-deployment
  labels:
    app: homeassist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassist
  template:
    metadata:
      labels:
        app: homeassist
    spec:
      containers:
        - name: homeassist
          image: homeassistant/home-assistant
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: "/config"
              name: homeassist-persistent-storage
            - mountPath: "/config/configuration.yaml"
              subPath: "configuration.yaml"
              name: homeassist-config
      volumes:
        - name: homeassist-config
          secret:
            secretName: homeassist-config
            defaultMode: 0777
        - name: homeassist-persistent-storage
          persistentVolumeClaim:
            claimName: homeassist-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: homeassist
spec:
  type: ClusterIP
  selector:
    app: homeassist
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8123

---
apiVersion: v1
kind: Service
metadata:
  name: homeassist-ingress-tcp
  namespace: ingress
  annotations:
    metallb.universe.tf/allow-shared-ip: "homeassist-shared-ip"
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  # loadBalancerIP is optional. MetalLB will automatically allocate an IP
  # from its pool if not specified. You can also specify one manually.
  # loadBalancerIP: x.y.z.a
  loadBalancerIP: 192.168.1.10
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassist-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - homeassist.local
      secretName: star-app-tls
  rules:
    - host: homeassist.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassist
                port:
                  number: 443
